--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,4 +7,7 @@
     <meta name="description" content="{{ site.description }}">
 
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
+    {% for css_name in page.extra_css %}
+    <link rel="stylesheet" href="{{ css_name }}">
+    {% endfor %}
 </head>
