--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,15 +4,12 @@
   {% include head.html %}
 
   <body>
-
-    {% include header.html %}
-
     <div class="page-content">
         {{ content }}
     </div>
-
   </body>
 
+  <!-- scripts -->
   {% for js_link in page.extra_js %}
   <script src="{{ js_link }}"></script>
   {% endfor %}
