--- a/css/index.scss
+++ b/css/index.scss
@@ -1,5 +1,5 @@
 ---
-# Homepage styles
+# Index styles
 ---
 
 .page {
@@ -49,6 +49,7 @@
             margin-left: 8px;
             background-color: #7CB342;
             border-radius: 2px;
+            box-sizing: inherit;
 
             transition: background-color 0.3s;
 
@@ -63,44 +64,32 @@
 
     padding: 24px;
     box-sizing: border-box;
-    background: #ebebeb;
     box-shadow: 0px 0px 20px 5px rgba(0,0,0,0.25);
+
+    height: initial;
+
+    background: #ebebeb; /* Old browsers */
+    background: -moz-linear-gradient(top,  #ebebeb 0%, #cccccc 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ebebeb), color-stop(100%,#cccccc)); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top,  #ebebeb 0%,#cccccc 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top,  #ebebeb 0%,#cccccc 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top,  #ebebeb 0%,#cccccc 100%); /* IE10+ */
+    background: linear-gradient(to bottom,  #ebebeb 0%,#cccccc 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ebebeb', endColorstr='#cccccc',GradientType=0 ); /* IE6-9 */
 
     h1 {
         font-weight: bold;
-        margin-bottom: 24px;
-    }
-
-    #about_picture {
-        width: 150px;
-        margin: 12px 0;
-    }
-
-    .line-center {
-        width: 100%;
-        text-align: center;
+        margin-bottom: 12px;
     }
 
     hr {
-        border: 0;
-        height: 1px;
-        background: #EEEEEE;
+        border-color: #CCC;
     }
-}
 
-.projects {
+    .about-info-top {
+        margin-bottom: 12px;
+    }
 
-    padding: 24px;
-    box-sizing: border-box;
-    background-image: url("/assets/projects_bg.png");
-    background-position: center center;
-    background-size: cover;
-    background-attachment: fixed;
-    color: #EBEBEB;
-}
-
-.blog {
-    background: #000000;
 }
 
 .outer {
