Added sideNav, changes to scrollSnap, Google Color sass, styling updates.

--- a/css/index.scss
+++ b/css/index.scss
@@ -2,60 +2,86 @@
 # Index styles
 ---
 
+@import "colors";
+@import "gradient";
+
 .page {
     width: 100%;
     height: 100%;
 }
 
+.sideNav {
+    width: 70px;
+    height: 100%;
+    position: fixed;
+    left:0;
+
+    .sideNav-button {
+        width: 100%;
+        height: 50%;
+        font-size: 32px;
+        text-align: center;
+        white-space: nowrap;
+        cursor: pointer;
+        color: color($grey, 500);
+        transition: color 0.2s, background-color 0.2s;
+        background-color: color($grey, 800);
+
+        &:hover {
+            color: color($grey, 400);
+            background-color: color($grey, 700);
+        }
+
+        &:before {
+            content: '';
+            display: inline-block;
+            height: 100%;
+            vertical-align: middle;
+            margin-right: -0.25em;
+        }
+
+        &.active {
+            background-color: color($green, 600);
+            color: color($grey, 800);
+
+            &:hover {
+                background-color: color($green, 500);
+            }
+        }
+
+        .glyphicon {
+            display: inline-block;
+            vertical-align: middle;
+        }
+    }
+}
+
 .scrollSnap-container {
     height: 100%;
-    width: 100%;
+    width: calc(100% - 70px);
     position: fixed;
+    right:0;
     overflow-y: scroll;
 }
 
 .home {
-    background-image: url("/assets/homepage_background.png");
-    background-position: center center;
-    background-size: cover;
-    background-attachment: fixed;
+    //background-image: url("/assets/homepage_background.png");
+    //background-position: center center;
+    //background-size: cover;
+    //background-attachment: fixed;
 
     .welcome-text {
         text-align: center;
-        color: #333;
+        color: color($grey, 800);
+        padding-bottom: 28px;
 
         h1 {
             font-size: 110px;
+            margin: 0;
         }
 
         h3 {
             font-size: 24px;
-        }
-    }
-
-    .home-nav {
-        width: 100%;
-        font-size: 0;
-        text-align: center;
-        margin-top: 40px;
-
-        .nav-button {
-            font-size: 18px;
-            width: 90px;
-            display: inline-block;
-            text-align: center;
-            padding: 26px;
-            cursor: pointer;
-            margin-left: 8px;
-            background-color: #7CB342;
-            border-radius: 2px;
-            box-sizing: inherit;
-
-            transition: background-color 0.3s;
-
-            &:hover {
-                background-color: #8BC34A;
-            }
         }
     }
 }
@@ -64,18 +90,9 @@
 
     padding: 24px;
     box-sizing: border-box;
-    box-shadow: 0px 0px 20px 5px rgba(0,0,0,0.25);
+    //box-shadow: 0px 0px 20px 5px rgba(0,0,0,0.25);
 
-    height: initial;
-
-    background: #ebebeb; /* Old browsers */
-    background: -moz-linear-gradient(top,  #ebebeb 0%, #cccccc 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ebebeb), color-stop(100%,#cccccc)); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top,  #ebebeb 0%,#cccccc 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(top,  #ebebeb 0%,#cccccc 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(top,  #ebebeb 0%,#cccccc 100%); /* IE10+ */
-    background: linear-gradient(to bottom,  #ebebeb 0%,#cccccc 100%); /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ebebeb', endColorstr='#cccccc',GradientType=0 ); /* IE6-9 */
+    @include background-gradient(color($grey, 200), color($grey, 300));
 
     h1 {
         font-weight: bold;
