Added link buttons to About page.

--- a/_includes/pages/about.html
+++ b/_includes/pages/about.html
@@ -1,4 +1,24 @@
 <div class="about page container-fluid" id="about">
     <h1>About</h1>
-    <h2>This is my personal website.</h2>
+    <h2>My name is <strong>Cody Smith</strong>, and this is my personal website.</h2>
+
+    <i>You can find me on these websites:</i>
+    <div class="row">
+        <div class="col-sm-6">
+            <a href="http://github.com/codysmithd">
+				<div class="about-button">
+				    Github
+				    <img class="button-watermark" src="/assets/about/GitHub_watermark.png"/>
+				</div>
+			</a>
+        </div>
+        <div class="col-sm-6">
+            <a href="http://stackoverflow.com/users/1801220/flynn">
+				<div class="about-button">
+				    Stack Overflow
+				    <img class="button-watermark" src="/assets/about/StackOverflow_watermark.png"/>
+				</div>
+			</a>
+        </div>
+    </div>
 </div>
