Added content to about page. Styling update.

--- a/_includes/pages/about.html
+++ b/_includes/pages/about.html
@@ -1,7 +1,36 @@
 <div class="about page container-fluid" id="about">
     <h1>About</h1>
     <h2>My name is <strong>Cody Smith</strong>, and this is my personal website.</h2>
-
+    <p>
+        I'm currently a student at the Rochester Institute of Technology studying Computer Engineering
+        with the Software Engineering option and an immursion in Human Language and Computational Linguistics.
+        I use this as my space to try new things in web-development and showcase some of my projects.
+    </p>
+    <br>
+    <i>My interests include:</i>
+    <div class="row">
+        <div class="col-sm-4">
+            <ul>
+                <li>Interface Design</li>
+                <li>Web application development</li>
+                <li>High-performance Computers</li>
+            </ul>
+        </div>
+        <div class="col-sm-4">
+            <ul>
+                <li>Embedded systems</li>
+                <li>Microcontrollers</li>
+                <li>Cars</li>
+            </ul>
+        </div>
+        <div class="col-sm-4">
+            <ul>
+                <li>Computational Linguistics</li>
+                <li>Human Computer interaction</li>
+            </ul>
+        </div>
+    </div>
+    <br>
     <i>You can find me on these websites:</i>
     <div class="row">
         <div class="col-sm-6">
