Homepage style update. About style changes.

--- a/_includes/pages/about.html
+++ b/_includes/pages/about.html
@@ -7,6 +7,7 @@
         I use this as my space to try new things in web-development and showcase some of my projects.
     </p>
     <br>
+
     <i>My interests include:</i>
     <div class="row">
         <div class="col-sm-4">
@@ -27,6 +28,7 @@
             <ul>
                 <li>Computational Linguistics</li>
                 <li>Human Computer interaction</li>
+                <li>Image Processing</li>
             </ul>
         </div>
     </div>
