--- a/_includes/pages/home.html
+++ b/_includes/pages/home.html
@@ -1,6 +1,6 @@
-<div class="home page">
-    <div class="outer"><div class="middle"><div class="inner welcome-text">
+<div class="home page vertical-center">
+    <div class="welcome-text vertical-center-child">
         <h1><b>Welcome</b></h1>
         <h3>to the digital home of Cody Smith</h3>
-    </div></div></div>
+    </div>
 </div>
