--- a/css/main.scss
+++ b/css/main.scss
@@ -46,3 +46,14 @@ $on-laptop:        800px;
 .text-center {
     text-align: center;
 }
+
+.vertical-center {
+
+    position: relative;
+
+    .vertical-center-child {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+    }
+}
