Added Projects page. Added URL change with page change.

--- a/_includes/pages/about.html
+++ b/_includes/pages/about.html
@@ -1,4 +1,4 @@
-<div class="about page container-fluid" id="about">
+<div class="page container-fluid" id="about">
     <h1>About</h1>
     <h2>My name is <strong>Cody Smith</strong>, and this is my personal website.</h2>
     <p>
