--- a/_includes/pages/home.html
+++ b/_includes/pages/home.html
@@ -1,4 +1,4 @@
-<div class="home page vertical-center">
+<div id="home" class="page vertical-center">
     <div class="welcome-text vertical-center-child">
         <h1><b>Welcome</b></h1>
         <h3>to the digital home of Cody Smith</h3>
