--- a/css/index.scss
+++ b/css/index.scss
@@ -18,7 +18,7 @@
 
     .sideNav-button {
         width: 100%;
-        height: 50%;
+        height: 33.33333333%;
         font-size: 32px;
         text-align: center;
         white-space: nowrap;
@@ -40,6 +40,13 @@
                 background-color: color($light-blue, 600);
                 &:hover {
                     background-color: color($light-blue, 500);
+                }
+            }
+
+            &.button-projects {
+                background-color: color($red, 600);
+                &:hover {
+                    background-color: color($red, 500);
                 }
             }
 
@@ -73,7 +80,7 @@
     overflow-x: hidden;
 }
 
-.home {
+#home {
 
     @include background-gradient(color($grey, 100), color($grey, 50));
 
@@ -96,7 +103,7 @@
     }
 }
 
-.about {
+#about {
 
     padding: 24px;
     box-sizing: border-box;
@@ -183,6 +190,23 @@
     	-o-transition:      .75s;
     }
 
+}
+
+#projects {
+    padding: 24px;
+
+    h1 {
+        margin: 0;
+        font-weight: bold;
+        font-size: 3em;
+    }
+
+    .vertical-center-child {
+        text-align: center;
+        width: 100%;
+        font-size: 2em;
+        font-weight: 300;
+    }
 }
 
 .outer {
