--- a/css/index.scss
+++ b/css/index.scss
@@ -110,7 +110,7 @@
     position: relative;
     //box-shadow: 0px 0px 20px 5px rgba(0,0,0,0.25);
 
-    @include background-gradient(color($grey, 200), color($grey, 100));
+    @include background-gradient(color($grey, 300), color($grey, 200));
     color: color($grey, 800);
 
     h1 {
@@ -206,6 +206,15 @@
         width: 100%;
         font-size: 2em;
         font-weight: 300;
+    }
+
+    #projects-bg {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: -1;
     }
 }
 
