Added dynamic parallax projects background. Styling changes.

--- a/_includes/pages/projects.html
+++ b/_includes/pages/projects.html
@@ -1,7 +1,9 @@
 <div id="projects" class="page vertical-center">
-    <h1>Projects</h1>
-    <div class="vertical-center-child">
-        Coming Soon
+    <div class="foreground">
+        <h1>Projects</h1>
+        <div class="vertical-center-child">
+          Coming Soon
+        </div>
     </div>
     <canvas id="projects-bg"></canvas>
 </div>
