--- a/css/index.scss
+++ b/css/index.scss
@@ -151,28 +151,29 @@
     .about-button {
         width: 100%;
         text-align:center;
-    	font-weight: 400;
+    	  font-weight: 400;
         padding: 12px 0;
         margin-bottom: 6px;
-        background-color: color($grey, 300);
+        border: 1px solid color($grey, 400);
         color: color($grey, 700);
-    	cursor:pointer;
-    	overflow:hidden;
-    	position:relative;
+    	  cursor:pointer;
+    	  overflow:hidden;
+    	  position:relative;
         z-index: 0;
         border-radius: 3px;
         font-weight: 500;
         font-size: 1.25em;
 
-    	transition:         .1s;
-    	-moz-transition:    .1s;
-    	-webkit-transition: .1s;
-    	-o-transition:      .1s;
+    	  transition:         .1s;
+    	  -moz-transition:    .1s;
+    	  -webkit-transition: .1s;
+    	  -o-transition:      .1s;
 
         &:hover {
             background-color: color($blue, 300);
             color: color($grey, 800);
             text-decoration: none;
+            border-color: transparent;
         }
     }
 
@@ -194,9 +195,12 @@
 
 #projects {
     padding: 24px;
+    // background-color: color($grey, 50);
+    @include background-gradient(color($grey, 50), color($grey, 400));
+    color: color($grey, 800);
 
     h1 {
-        margin: 0;
+        margin: 12px 0 0 24px;
         font-weight: bold;
         font-size: 3em;
     }
@@ -208,13 +212,22 @@
         font-weight: 300;
     }
 
+    .foreground {
+      position: absolute;
+      height: 100%;
+      width: 100%;
+      top: 0;
+      left: 0;
+      z-index: 1;
+    }
+
     #projects-bg {
         width: 100%;
         height: 100%;
         position: absolute;
         top: 0;
         left: 0;
-        z-index: -1;
+        opacity: 0.3;
     }
 }
 
