Added homepage background and canvas. Style updates.

--- a/_includes/pages/home.html
+++ b/_includes/pages/home.html
@@ -3,4 +3,5 @@
         <h1><b>Welcome</b></h1>
         <h3>to the digital home of Cody Smith</h3>
     </div>
+    <canvas id="home-bg"></canvas>
 </div>
