--- a/css/index.scss
+++ b/css/index.scss
@@ -24,6 +24,7 @@
         white-space: nowrap;
         cursor: pointer;
         transition: color 0.2s, background-color 0.2s;
+        box-shadow: inset -7px 0 9px -7px rgba(0,0,0,0.7);
 
         color: color($grey, 500);
         background-color: color($grey, 800);
@@ -90,6 +91,7 @@
         padding-bottom: 28px;
         display: inline-block;
         width: 100%;
+        z-index: 1;
 
         h1 {
             margin: 0;
@@ -100,6 +102,15 @@
         h3 {
             font-size: 1.75em;
         }
+    }
+
+    #home-bg {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        opacity: 1;
     }
 }
 
@@ -196,7 +207,7 @@
 #projects {
     padding: 24px;
     // background-color: color($grey, 50);
-    @include background-gradient(color($grey, 50), color($grey, 400));
+    @include background-gradient(color($grey, 50), color($grey, 300));
     color: color($grey, 800);
 
     h1 {
