About page layout and style re-design.

--- a/_includes/pages/about.html
+++ b/_includes/pages/about.html
@@ -1,55 +1,59 @@
-<div class="page container-fluid" id="about">
+<div class="page vertical-center" id="about">
     <h1>About</h1>
-    <h2>My name is <strong>Cody Smith</strong>, and this is my personal website.</h2>
-    <p>
-        I'm currently a student at the Rochester Institute of Technology studying Computer Engineering
-        with the Software Engineering option and an immursion in Human Language and Computational Linguistics.
-        I use this as my space to try new things in web-development and showcase some of my projects.
-    </p>
-    <br>
+    <div class="text-center vertical-center-child about-content">
+        <img src="/assets/about_picture.png" height="225">
+        <h2>My name is <strong>Cody Smith</strong>, and this is my personal website.</h2>
+        <p>
+            I'm currently a student at the Rochester Institute of Technology studying Computer Engineering
+            with the Software Engineering option and an immursion in Human Language and Computational Linguistics.
+            I use this as my space to try new things in web-development and showcase some of my projects.
+        </p>
 
-    <i>My interests include:</i>
-    <div class="row">
-        <div class="col-sm-4">
-            <ul>
-                <li>Interface Design</li>
-                <li>Web application development</li>
-                <li>High-performance Computers</li>
-            </ul>
+        <hr>
+        <i>My interests include:</i>
+        <div class="row about-interests">
+            <div class="col-sm-4">
+                <ul>
+                    <li>Interface Design</li>
+                    <li>Web applications</li>
+                    <li>High-performance Computers</li>
+                </ul>
+            </div>
+            <div class="col-sm-4">
+                <ul>
+                    <li>Embedded systems</li>
+                    <li>Microcontrollers</li>
+                    <li>Autonomous Cars</li>
+                </ul>
+            </div>
+            <div class="col-sm-4">
+                <ul>
+                    <li>Computational Linguistics</li>
+                    <li>Human Computer interaction</li>
+                    <li>Image Processing</li>
+                </ul>
+            </div>
         </div>
-        <div class="col-sm-4">
-            <ul>
-                <li>Embedded systems</li>
-                <li>Microcontrollers</li>
-                <li>Cars</li>
-            </ul>
-        </div>
-        <div class="col-sm-4">
-            <ul>
-                <li>Computational Linguistics</li>
-                <li>Human Computer interaction</li>
-                <li>Image Processing</li>
-            </ul>
+        <hr>
+        <i>You can find me on these websites:</i>
+        <div class="row">
+            <div class="col-sm-6">
+                <a href="http://github.com/codysmithd">
+    				<div class="about-button">
+    				    Github
+    				    <img class="button-watermark" src="/assets/about/GitHub_watermark.png"/>
+    				</div>
+    			</a>
+            </div>
+            <div class="col-sm-6">
+                <a href="http://stackoverflow.com/users/1801220/flynn">
+    				<div class="about-button">
+    				    Stack Overflow
+    				    <img class="button-watermark" src="/assets/about/StackOverflow_watermark.png"/>
+    				</div>
+    			</a>
+            </div>
         </div>
     </div>
-    <br>
-    <i>You can find me on these websites:</i>
-    <div class="row">
-        <div class="col-sm-6">
-            <a href="http://github.com/codysmithd">
-				<div class="about-button">
-				    Github
-				    <img class="button-watermark" src="/assets/about/GitHub_watermark.png"/>
-				</div>
-			</a>
-        </div>
-        <div class="col-sm-6">
-            <a href="http://stackoverflow.com/users/1801220/flynn">
-				<div class="about-button">
-				    Stack Overflow
-				    <img class="button-watermark" src="/assets/about/StackOverflow_watermark.png"/>
-				</div>
-			</a>
-        </div>
-    </div>
+
 </div>
