--- a/css/index.scss
+++ b/css/index.scss
@@ -128,15 +128,36 @@
     padding: 24px;
     box-sizing: border-box;
     position: relative;
-    //box-shadow: 0px 0px 20px 5px rgba(0,0,0,0.25);
-
-    @include background-gradient(color($grey, 300), color($grey, 200));
-    color: color($grey, 800);
 
     h1 {
         font-weight: bold;
         font-size: 3em;
         margin: 0;
+    }
+
+    @include background-gradient(color($grey, 300), color($grey, 200));
+    color: color($grey, 800);
+
+    .about-content {
+        width: 1000px;
+        left: 50%;
+        transform: translateX(-50%) translateY(-50%);
+        border: 1px solid transparent;
+
+        @media screen and (max-width: 1100px) {
+            width: 90%;
+        }
+
+        .about-interests {
+            ul {
+                text-align: left;
+            }
+        }
+
+        .row {
+            margin-top: 6px;
+        }
+
     }
 
     h2 {
@@ -161,11 +182,6 @@
 
     a {
         text-decoration: none;
-    }
-
-    .about-footer {
-        position: absolute;
-        bottom: 0;
     }
 
     .about-button {
