Added translate prefixes to fix cross-browser layout issues

--- a/css/main.scss
+++ b/css/main.scss
@@ -55,5 +55,7 @@ $on-laptop:        800px;
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
+        -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
     }
 }
