--- a/css/index.scss
+++ b/css/index.scss
@@ -141,8 +141,10 @@
     .about-content {
         width: 1000px;
         left: 50%;
-        transform: translateX(-50%) translateY(-50%);
         border: 1px solid transparent;
+        transform: translateX(-50%) translateY(-50%);
+        -webkit-transform: translateX(-50%) translateY(-50%);
+        -ms-transform: translateX(-50%) translateY(-50%);
 
         @media screen and (max-width: 1100px) {
             width: 90%;
