Added content to projects page. Style updates.

--- a/_includes/pages/about.html
+++ b/_includes/pages/about.html
@@ -1,7 +1,7 @@
 <div class="page vertical-center" id="about">
     <h1>About</h1>
     <div class="text-center vertical-center-child about-content">
-        <img src="/assets/about_picture.png" height="225">
+        <img src="/assets/about/about_pic.png" height="165">
         <h2>My name is <strong>Cody Smith</strong>, and this is my personal website.</h2>
         <p>
             I'm currently a student at the Rochester Institute of Technology studying Computer Engineering
