--- a/_includes/pages/projects.html
+++ b/_includes/pages/projects.html
@@ -1,8 +1,38 @@
 <div id="projects" class="page vertical-center">
     <div class="foreground">
         <h1>Projects</h1>
-        <div class="vertical-center-child">
-          Coming Soon
+        <div class="vertical-center-child projects-grid row">
+
+            <a href="http://edge.rit.edu/edge/P16241/public/Home">
+                <div class="project-button">
+                    <div class="project-button-content">
+                        <h3>Senior Design</h3>
+                        <h4>Autonomous People Mover (Golf Cart)</h4>
+                    </div>
+                    <img src="/assets/projects/rit_logo.png">
+                </div>
+            </a>
+
+            <a href="http://zipty.org/">
+                <div class="project-button">
+                    <div class="project-button-content">
+                        <h3>Zipty</h3>
+                        <h4>Javascript component packaging</h4>
+                    </div>
+                    <img src="/assets/projects/zipty_logo.png">
+                </div>
+            </a>
+
+            <a href="https://github.com/codysmithd/SAIL">
+                <div class="project-button">
+                    <div class="project-button-content">
+                        <h3>SAIL</h3>
+                        <h4>Conversational AI</h4>
+                    </div>
+                    <img src="/assets/projects/sail_logo.png">
+                </div>
+            </a>
+
         </div>
     </div>
     <canvas id="projects-bg"></canvas>
