--- a/css/index.scss
+++ b/css/index.scss
@@ -7,7 +7,10 @@
 
 .page {
     width: 100%;
-    height: 100%;
+    min-height: 100%;
+    -webkit-transform-style: preserve-3d;
+    -moz-transform-style: preserve-3d;
+    transform-style: preserve-3d;
 }
 
 .sideNav {
@@ -186,26 +189,30 @@
         text-decoration: none;
     }
 
+    img {
+        margin-bottom: 24px;
+    }
+
     .about-button {
         width: 100%;
         text-align:center;
-    	  font-weight: 400;
+    	font-weight: 400;
         padding: 12px 0;
         margin-bottom: 6px;
         border: 1px solid color($grey, 400);
         color: color($grey, 700);
-    	  cursor:pointer;
-    	  overflow:hidden;
-    	  position:relative;
+    	cursor:pointer;
+    	overflow:hidden;
+    	position:relative;
         z-index: 0;
         border-radius: 3px;
         font-weight: 500;
         font-size: 1.25em;
 
-    	  transition:         .1s;
-    	  -moz-transition:    .1s;
-    	  -webkit-transition: .1s;
-    	  -o-transition:      .1s;
+    	transition:         .1s;
+    	-moz-transition:    .1s;
+    	-webkit-transition: .1s;
+    	-o-transition:      .1s;
 
         &:hover {
             background-color: color($blue, 300);
@@ -243,13 +250,6 @@
         font-size: 3em;
     }
 
-    .vertical-center-child {
-        text-align: center;
-        width: 100%;
-        font-size: 2em;
-        font-weight: 300;
-    }
-
     .foreground {
       position: absolute;
       height: 100%;
@@ -257,6 +257,75 @@
       top: 0;
       left: 0;
       z-index: 1;
+    }
+
+    .vertical-center-child.projects-grid {
+        text-align: center;
+        left: 50%;
+        transform: translateX(-50%) translateY(-50%);
+        -webkit-transform: translateX(-50%) translateY(-50%);
+        -ms-transform: translateX(-50%) translateY(-50%);
+        width: 1000px;
+
+        @media screen and (max-width: 1100px) {
+            width: 90%;
+        }
+
+        h2 {
+            font-weight: lighter;
+            font-size: 2em;
+            text-align: left;
+        }
+
+        .project-button {
+            position: relative;
+            font-size: 1em;
+            display: inline-block;
+            border: 1px solid color($grey, 400);
+            border-radius: 3px;
+            cursor: pointer;
+            color: color($grey, 800);
+            width: 150px;
+            height: 150px;
+            transition:         .2s;
+        	-moz-transition:    .2s;
+        	-webkit-transition: .2s;
+        	-o-transition:      .2s;
+            overflow: hidden;
+            text-align: left;
+
+            .project-button-content {
+                position: relative;
+                width: 100%;
+                top: 50%;
+                transform: translateY(-50%);
+                text-align: center;
+                z-index: 2;
+
+                h3 {
+                    font-size: 1.25em;
+                    font-weight: bold;
+                }
+
+                h4 {
+                    font-size: 1em;
+                    font-weight: normal;
+                }
+            }
+
+            img {
+                position: absolute;
+                top: 0;
+                opacity: 0.1;
+                z-index: 1;
+            }
+
+            &:hover {
+                background-color: color($red, 500);
+                border-color: color($red, 500);
+                color: color($grey, 900);
+            }
+        }
     }
 
     #projects-bg {
