Added freescale cup report without code to projects. Projects style update.

--- a/_includes/pages/projects.html
+++ b/_includes/pages/projects.html
@@ -13,6 +13,16 @@
                 </div>
             </a>
 
+            <a href="/content/freescalecup_report_public_no_code.pdf">
+                <div class="project-button">
+                    <div class="project-button-content">
+                        <h3>Freescale Cup (2015)</h3>
+                        <h4>Autonomous Car Racing</h4>
+                    </div>
+                    <img src="/assets/projects/freescale_logo.png">
+                </div>
+            </a>
+
             <a href="http://zipty.org/">
                 <div class="project-button">
                     <div class="project-button-content">
