Modified verticle center class to prepare to fix mobile height over 100% issue.

--- a/_includes/pages/about.html
+++ b/_includes/pages/about.html
@@ -1,6 +1,6 @@
-<div class="page vertical-center" id="about">
+<div class="page" id="about">
     <h1>About</h1>
-    <div class="text-center vertical-center-child about-content">
+    <div class="text-center vertical-center about-content">
         <img src="/assets/about/about_pic.png" height="165">
         <h2>My name is <strong>Cody Smith</strong>, and this is my personal website.</h2>
         <p>
