--- a/_includes/pages/home.html
+++ b/_includes/pages/home.html
@@ -1,5 +1,5 @@
-<div id="home" class="page vertical-center">
-    <div class="welcome-text vertical-center-child">
+<div id="home" class="page">
+    <div class="welcome-text vertical-center">
         <h1><b>Welcome</b></h1>
         <h3>to the digital home of Cody Smith</h3>
     </div>
