--- a/_includes/pages/projects.html
+++ b/_includes/pages/projects.html
@@ -1,7 +1,7 @@
-<div id="projects" class="page vertical-center">
+<div id="projects" class="page">
     <div class="foreground">
         <h1>Projects</h1>
-        <div class="vertical-center-child projects-grid row">
+        <div class="vertical-center projects-grid row">
 
             <a href="http://edge.rit.edu/edge/P16241/public/Home">
                 <div class="project-button">
