--- a/css/index.scss
+++ b/css/index.scss
@@ -7,7 +7,7 @@
 
 .page {
     width: 100%;
-    min-height: 100%;
+    height: 100%;
     -webkit-transform-style: preserve-3d;
     -moz-transform-style: preserve-3d;
     transform-style: preserve-3d;
@@ -259,7 +259,7 @@
       z-index: 1;
     }
 
-    .vertical-center-child.projects-grid {
+    .vertical-center.projects-grid {
         text-align: center;
         left: 50%;
         transform: translateX(-50%) translateY(-50%);
