Updated homepage background. Modified interests on about page.

--- a/_includes/pages/about.html
+++ b/_includes/pages/about.html
@@ -16,13 +16,15 @@
                 <ul>
                     <li>Interface Design</li>
                     <li>Web applications</li>
-                    <li>High-performance Computers</li>
+                    <li>Mobile applications</li>
+                    <li>Desktop applications</li>
                 </ul>
             </div>
             <div class="col-sm-4">
                 <ul>
                     <li>Embedded systems</li>
                     <li>Microcontrollers</li>
+                    <li>Assembly language programming</li>
                     <li>Autonomous Cars</li>
                 </ul>
             </div>
@@ -31,6 +33,7 @@
                     <li>Computational Linguistics</li>
                     <li>Human Computer interaction</li>
                     <li>Image Processing</li>
+                    <li>Digital signal processing</li>
                 </ul>
             </div>
         </div>
