--- a/css/index.scss
+++ b/css/index.scss
@@ -88,6 +88,9 @@
 
     @include background-gradient(color($grey, 100), color($grey, 50));
 
+    background-image: url('/assets/home/home_bg.jpg');
+    background-size: cover;
+
     .welcome-text {
         text-align: center;
         color: color($grey, 800);
@@ -122,7 +125,7 @@
         position: absolute;
         top: 0;
         left: 0;
-        opacity: 1;
+        opacity: 0;
     }
 }
 
