Updates for ENGL361 final project

--- a/_includes/pages/projects.html
+++ b/_includes/pages/projects.html
@@ -1,7 +1,9 @@
 <div id="projects" class="page">
     <div class="foreground">
-        <h1>Projects</h1>
         <div class="vertical-center projects-grid row">
+
+            <h2>Projects</h2>
+            <p>Some selected example projects I've been working on:</p>
 
             <a href="http://edge.rit.edu/edge/P16241/public/Home">
                 <div class="project-button">
@@ -23,16 +25,6 @@
                 </div>
             </a>
 
-            <a href="http://zipty.org/">
-                <div class="project-button">
-                    <div class="project-button-content">
-                        <h3>Zipty</h3>
-                        <h4>Javascript component packaging</h4>
-                    </div>
-                    <img src="/assets/projects/zipty_logo.png">
-                </div>
-            </a>
-
             <a href="https://github.com/codysmithd/SAIL">
                 <div class="project-button">
                     <div class="project-button-content">
@@ -43,7 +35,38 @@
                 </div>
             </a>
 
+            <a href="https://github.com/codysmithd/PyGPS">
+                <div class="project-button">
+                    <div class="project-button-content">
+                        <h3>PyGPS</h3>
+                        <h4>Python NMEA data wrapper and utility</h4>
+                    </div>
+                </div>
+            </a>
+
+            <div class="row" style="margin-top: 24px">
+                <h2>Example Writing</h2>
+                <p>The following are some selected examples of my technical writing:</p>
+                <div class="col-sm-4">
+                    <a href="/content/cmpe685_project2_smith.pdf">CMPE685: Color and Texture Features</a>
+                </div>
+                <div class="col-sm-4">
+                    <a href="/content/engl361_manual_smith.pdf">ENGL361: New Student Manual</a>
+                </div>
+                <div class="col-sm-4">
+                    <a href="/content/RhetoricalAnalysisMemo.pdf">ENGL361: Rhetorical Analysis Memorandum</a>
+                </div>
+                <div class="col-sm-4">
+                    <a href="/content/ExtendedDefinitionAssignment_Smith.pdf">ENGL361: Extended Definition Assignment</a>
+                </div>
+                <div class="col-sm-4">
+                    <a href="/content/engl361_homework4.pdf">ENGL361: Homework 4, How to Change a Car Tire</a>
+                </div>
+
+            </div>
+
         </div>
+
     </div>
     <canvas id="projects-bg"></canvas>
 </div>
