--- a/styles/index.css
+++ b/styles/index.css
@@ -5,7 +5,13 @@
 body {
   margin: 0;
   font-family: 'Open Sans', sans-serif;
-  background: linear-gradient(45deg, #03A9F4, #D4E157);
+}
+#background-animation {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 .flex-container {
   display: flex;
@@ -23,6 +29,7 @@ body {
   border-radius: 4px;
   opacity: 0.9;
   box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.55);
+  z-index: 10;
 }
 .flex-container #main-card h1 {
   font-size: 4em;
