--- a/styles/index.less
+++ b/styles/index.less
@@ -4,12 +4,12 @@ body {
 
   margin: 0;
   font-family: 'Open Sans', sans-serif;
+}
 
-  background: linear-gradient(
-    45deg,
-    @palette-Light-Blue-500,
-    @palette-Lime-400
-  )
+#background-animation {
+  width: 100%; height: 100%;
+  position: absolute;
+  top: 0; left: 0;
 }
 
 .flex-container {
@@ -22,7 +22,6 @@ body {
 
   #main-card {
 
-    background-color: @palette-Grey-900;
     background: linear-gradient(
             90deg,
             @palette-Blue-Grey-900,
@@ -34,6 +33,7 @@ body {
     border-radius: 4px;
     opacity: 0.9;
     box-shadow: 0px 5px 20px 0px rgba(0,0,0,0.55);
+    z-index: 10;
 
     h1 {
       font-size: 4em;
